# fib_chal

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  local.env
src/: fibonacci.rs  main.rs
