[package]
name = "fib_chal"
version = "0.1.0"
authors = ["Jackson Egan <jackson@sneagan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-session = "0.4.0"
lazy_static = "1.4.0"
num = "0.3.1"
